<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50sp"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/notification"
                android:textAlignment="textStart"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/help"
                android:textAlignment="textStart"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/about_us"
                android:textAlignment="textStart"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>




