<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="50sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helloAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_android"
        android:layout_gravity="end"
        android:textSize="50sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:text="@string/button"
        android:background="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNext"
        />

    <Button
        android:id="@+id/btnNext"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:text="@string/next"
        android:background="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helloAndroid"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@color/colorPrimaryDark"/>

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@color/colorAccent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp" />

    </FrameLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>