<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/LinLay1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="Hello World!"
                    android:textColor="@color/colorPrimary"
                    android:textSize="50sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="bottom"
                    android:text="@string/hello_android"
                    android:textColor="@color/colorAccent"
                    android:textSize="50sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text2" />

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="200sp"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:background="@color/colorAccent"
                    android:text="@string/back"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinLay1"
                android:orientation="vertical"
                android:layout_marginBottom="50dp">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_first_list"
                    android:textSize="24sp"
                    android:textStyle="bold|italic"
                    android:gravity="start|center_vertical"
                    android:drawableLeft="@drawable/phone"
                    android:drawableStart="@drawable/phone" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:shadowRadius="13"
                    android:text="2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:text="3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:text="4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:text="5" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:text="6" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:text="7" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:text="8" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:text="9" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:text="10" />
            </LinearLayout>
        </RelativeLayout>



    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start"
                style="@style/Theme.AppCompat.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Start" />

            <Button
                style="@style/Theme.AppCompat.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Stop" />
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




